--- a/report/refs.bib
+++ b/report/refs.bib
@@ -8,4 +8,10 @@
   pages = 	 "803-806"
 }
 
-
+@inproceedings{deng2020retinaface,
+  title={Retinaface: Single-shot multi-level face localisation in the wild},
+  author={Deng, Jiankang and Guo, Jia and Ververas, Evangelos and Kotsia, Irene and Zafeiriou, Stefanos},
+  booktitle={Proceedings of the IEEE/CVF conference on computer vision and pattern recognition},
+  pages={5203--5212},
+  year={2020}
+}
