--- a/report/AIML425_project.tex
+++ b/report/AIML425_project.tex
@@ -65,6 +65,7 @@ Fine tuning model approach will be introduced in this study.
   \subsection{Model Fine Tuning and evaluation}
   \label{ssec:model}
 
+\section{Impact}
   
 \section{CONCLUSION}
 \label{sec:conclusion}
