--- a/report/AIML425_project.tex
+++ b/report/AIML425_project.tex
@@ -51,9 +51,10 @@ The method employs a multi-task learning strategy to simultaneously predict vari
 RetinaFace, as the name suggests, is a specialized adaptation of the RetinaNet architecture for face detection. While it retains the core principles of RetinaNet, it introduces additional components tailored for face detection, such as:
 
 \begin{enumerate} 
-\item   Predicting facial landmarks in addition to face bounding boxes.
-\item  Incorporating a mesh decoder for predicting pixel-wise 3D face shapes.
-
+\item Context Module
+\item Cascade Multi-task Loss
+\item Predicting facial landmarks in addition to face bounding boxes.
+\item Incorporating a mesh decoder for predicting pixel-wise 3D face shapes.
 \end{enumerate}
 
 In essence, while RetinaNet was designed for general object detection, RetinaFace adapts and extends the architecture to cater specifically to the challenges and requirements of face detection.
