add retinanet ref

--- a/report/AIML425_project.tex
+++ b/report/AIML425_project.tex
@@ -61,7 +61,7 @@ In essence, while RetinaNet was designed for general object detection, RetinaFac
 
 \subsection{RetinaNet}
 
-RetinaNet is a single-stage object detector that introduced the Focal Loss to address the class imbalance problem inherent in object detection tasks. The name "RetinaNet" is derived from its use of a feature pyramid network (FPN) to detect objects at different scales, similar to the multi-scale processing in the human retina.
+RetinaNet \cite{lin2017focal} is a single-stage object detector that introduced the Focal Loss to address the class imbalance problem inherent in object detection tasks. The name "RetinaNet" is derived from its use of a feature pyramid network (FPN) to detect objects at different scales, similar to the multi-scale processing in the human retina.
 
 The architecture and features of RetinaNet are:
 
