--- a/report/AIML425_project.tex
+++ b/report/AIML425_project.tex
@@ -152,7 +152,7 @@ The Focal Loss is a pivotal innovation in the realm of object detection. By dyna
 
 In traditional computer vision, pyramids were used to process images at multiple scales to detect objects of varying sizes.
 Deep convolutional neural networks (CNNs) inherently produce feature maps at different resolutions, with shallow layers capturing high-resolution but semantically weak features and deep layers capturing low-resolution but semantically strong features.
-FPN aims to leverage these multi-scale features effectively for object detection.
+FPN \cite{lin2017feature} aims to leverage these multi-scale features effectively for object detection.
 
 It consists of the following parts.
 
