--- a/report/refs.bib
+++ b/report/refs.bib
@@ -31,3 +31,31 @@
   pages={2117--2125},
   year={2017}
 }
+
+@article{xu2022cattlefacenet,
+  title={CattleFaceNet: A cattle face identification approach based on RetinaFace and ArcFace loss},
+  author={Xu, Beibei and Wang, Wensheng and Guo, Leifeng and Chen, Guipeng and Li, Yongfeng and Cao, Zhen and Wu, Saisai},
+  journal={Computers and Electronics in Agriculture},
+  volume={193},
+  pages={106675},
+  year={2022},
+  publisher={Elsevier}
+}
+
+@inproceedings{aswal2020single,
+  title={Single camera masked face identification},
+  author={Aswal, Vivek and Tupe, Omkar and Shaikh, Shifa and Charniya, Nadir N},
+  booktitle={2020 19th IEEE international conference on machine learning and applications (ICMLA)},
+  pages={57--60},
+  year={2020},
+  organization={IEEE}
+}
+
+@inproceedings{putro2022faster,
+  title={A Faster Real-time Face Detector Support Smart Digital Advertising on Low-cost Computing Device},
+  author={Putro, Muhamad Dwisnanto and Priadana, Adri and Nguyen, Duy-Linh and Jo, Kang-Hyun},
+  booktitle={2022 IEEE/ASME International Conference on Advanced Intelligent Mechatronics (AIM)},
+  pages={171--178},
+  year={2022},
+  organization={IEEE}
+}
